k8s/himnario-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: himnario-nginx
spec:
  selector:
    app: himnario-nginx
  ports:
    - port: 80
      targetPort: 80
