k8s/himnario-php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: himnario-php
spec:
  selector:
    app: himnario-php
  ports:
    - port: 9000
      targetPort: 9000
